example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-httpbin
  namespace: httpbin
spec:
  ingressClassName: ingress-envoy
  rules:
  - host: "first.example.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: second-httpbin
  namespace: httpbin
spec:
  ingressClassName: ingress-envoy
  rules:
  - host: "second.example.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-needed
  namespace: httpbin
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
spec:
  ingressClassName: ingress-envoy
  rules:
  - host: "nginx.example.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
